src/styles.css
/* You can add global styles to this file, and also import other style files */

body {
    font-family: "Work Sans", Arial, sans-serif;
    color: #606060;
}

.title-style {
    font-weight: 300;
    color: black;
}

.default-bg {
    background-image: url('assets/images/login-bg.jpg');
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
}

.navbar-brand {
    text-transform: uppercase;
    letter-spacing: .3em;
    font-size: 1.7em;
    text-shadow: 2px 2px rgba(196, 112, 16, 0.2);
}

.login-container {
    width: 450px;
    margin: auto;
    background-color: white;
    padding: 30px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.flex-container {
    height: 98vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

@media (min-width: 991px) {
    .flex-container {
        height: 70vh;
    }
}

.container-bg {
    background-color: white;
    padding: 30px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    min-width: 48vw;
}

.login-btn {
    width: 100px!important;
    margin: auto;
}

nav .nav-item {
    padding: 1.6em 1em;
    font-size: 12px;
    text-transform: uppercase;
    letter-spacing: .1em;
    font-weight: 400;
}

.create-link {
    padding-top: 10px;
}

.bootstrap-animate {
    opacity: 0;
    visibility: hidden;
 }

 .footer-style {
    position:fixed;
    left:0px;
    bottom:0px;
    height:30px;
    width:100%;
    font-weight: 300;
 }

 .site {
     height: 100vh;
     box-sizing: border-box;
 }

 .title-border {
     max-width: 500px;
     border-width: 5px;
     border-color: #ff3300;
 }

 /* Animate */
 .bootstrap-animate {
    opacity: 0;
    visibility: hidden; 
}

